--- a/404.html
+++ b/404.html
@@ -13,8 +13,8 @@
 	<meta name="apple-mobile-web-app-title" content="NGOK" />
 	<link rel="manifest" href="/site.webmanifest" />
 
-	<meta name="theme-color" content="#FAFAFA" media="(prefers-color-scheme: light)" />
-	<meta name="theme-color" content="#0B0B09" media="(prefers-color-scheme: dark)" />
+	<meta name="theme-color" content="#FFFFFF" media="(prefers-color-scheme: light)" />
+	<meta name="theme-color" content="#090A0B" media="(prefers-color-scheme: dark)" />
 
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -67,11 +67,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BbLWbfv7.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DQi5BVLw.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DJwCscpT.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CYFrpm-_.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.D8KT0RxQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BbgpAFUk.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.B3iYRIEe.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BLuXniaz.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.z-UcVESM.js">
 </head>
 
@@ -79,15 +79,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_19okh04 = {
+					__sveltekit_4e8yc0 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BbLWbfv7.js"),
-						import("/_app/immutable/entry/app.B3iYRIEe.js")
+						import("/_app/immutable/entry/start.DJwCscpT.js"),
+						import("/_app/immutable/entry/app.BLuXniaz.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
