--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<meta name="apple-mobile-web-app-title" content="NGOK" />
 	<link rel="manifest" href="/site.webmanifest" />
 
-	<meta name="theme-color" content="#FAFAFA" media="(prefers-color-scheme: light)" />
-	<meta name="theme-color" content="#0B0B09" media="(prefers-color-scheme: dark)" />
+	<meta name="theme-color" content="#FFFFFF" media="(prefers-color-scheme: light)" />
+	<meta name="theme-color" content="#090A0B" media="(prefers-color-scheme: dark)" />
 
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -69,15 +69,15 @@
 	
 		<link href="./_app/immutable/assets/0.C-nj7oxP.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BbLWbfv7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DQi5BVLw.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DJwCscpT.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CYFrpm-_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.D8KT0RxQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BbgpAFUk.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B3iYRIEe.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BLuXniaz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.z-UcVESM.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.VXPIVv5R.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Cj3YR62g.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/popper-layer-force-mount.CPqwOfTm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.B9tZHHgd.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CgoPOs9L.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Cdp4U3P_.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.CL46in_-.js">
 </head>
@@ -95,7 +95,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_19okh04 = {
+					__sveltekit_4e8yc0 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -104,8 +104,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BbLWbfv7.js"),
-						import("./_app/immutable/entry/app.B3iYRIEe.js")
+						import("./_app/immutable/entry/start.DJwCscpT.js"),
+						import("./_app/immutable/entry/app.BLuXniaz.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
