--- a/404.html
+++ b/404.html
@@ -67,27 +67,27 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CQ8m5heg.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BYTGms-F.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.D8KT0RxQ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.BbgpAFUk.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.O9K1SFia.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.z-UcVESM.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BLyVIui6.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BIhnfw7A.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DwHccnIN.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.DUcTUqGb.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.D8n1D8mq.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.D0gLaqi_.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_75vrzp = {
+					__sveltekit_f2dxu = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CQ8m5heg.js"),
-						import("/_app/immutable/entry/app.O9K1SFia.js")
+						import("/_app/immutable/entry/start.BLyVIui6.js"),
+						import("/_app/immutable/entry/app.D8n1D8mq.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
