--- a/404.html
+++ b/404.html
@@ -67,27 +67,27 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.YWz4xA7Z.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CFaC68if.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.D8KT0RxQ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.BbgpAFUk.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.pnBqipxd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.z-UcVESM.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start._5C9Dg-i.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CHEZhsCv.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DwHccnIN.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.DUcTUqGb.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.g8AfzEZx.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.D0gLaqi_.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1pffmzi = {
+					__sveltekit_wjfjy3 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.YWz4xA7Z.js"),
-						import("/_app/immutable/entry/app.pnBqipxd.js")
+						import("/_app/immutable/entry/start._5C9Dg-i.js"),
+						import("/_app/immutable/entry/app.g8AfzEZx.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
