--- a/404.html
+++ b/404.html
@@ -67,11 +67,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start._5C9Dg-i.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CHEZhsCv.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BRBY0qO5.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CmHXCtmY.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DwHccnIN.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.DUcTUqGb.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.g8AfzEZx.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.B_mfM9zc.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.D0gLaqi_.js">
 </head>
 
@@ -79,15 +79,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_wjfjy3 = {
+					__sveltekit_rsh7lg = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start._5C9Dg-i.js"),
-						import("/_app/immutable/entry/app.g8AfzEZx.js")
+						import("/_app/immutable/entry/start.BRBY0qO5.js"),
+						import("/_app/immutable/entry/app.B_mfM9zc.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
