--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
 	
 		<link href="./_app/immutable/assets/0.Vy4otvV0.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BRBY0qO5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CmHXCtmY.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.7bOxCMCg.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.dtCDQRC8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.DwHccnIN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DUcTUqGb.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B_mfM9zc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CwX0ovE7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.D0gLaqi_.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CvaM2c1g.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BnVKDYGU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/popper-layer-force-mount.cLOxdbZU.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DMPcjTFL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DUXwRmnk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.3yyak4pK.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.CboqEr5c.js">
 </head>
@@ -95,7 +95,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_rsh7lg = {
+					__sveltekit_spmkqd = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -104,8 +104,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BRBY0qO5.js"),
-						import("./_app/immutable/entry/app.B_mfM9zc.js")
+						import("./_app/immutable/entry/start.7bOxCMCg.js"),
+						import("./_app/immutable/entry/app.CwX0ovE7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
