--- a/404.html
+++ b/404.html
@@ -12,9 +12,7 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<meta name="apple-mobile-web-app-title" content="NGOK" />
 	<link rel="manifest" href="/site.webmanifest" />
-
-	<meta name="theme-color" content="#FFFFFF" media="(prefers-color-scheme: light)" />
-	<meta name="theme-color" content="#090A0B" media="(prefers-color-scheme: dark)" />
+	<meta name="theme-color" content="#ffffff" />
 
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -60,6 +58,10 @@
 				savedTheme ? savedTheme === 'dark' : prefersDarkScheme
 			);
 
+			document
+				.querySelector('meta[name="theme-color"]')
+				?.setAttribute('content', (savedTheme ? savedTheme === 'dark' : prefersDarkScheme) ? '#090a0b' : '#ffffff');
+
 			const savedLanguage = getCookie('language');
 			const browserLanguage = navigator.language.startsWith('ru') ? 'ru' : 'en';
 			document.documentElement.setAttribute('lang', savedLanguage || browserLanguage);
@@ -67,11 +69,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.7bOxCMCg.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.dtCDQRC8.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BokW7yu7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DEZVsc0c.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DwHccnIN.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.DUcTUqGb.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CwX0ovE7.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Bbis9Nir.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.D0gLaqi_.js">
 </head>
 
@@ -79,15 +81,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_spmkqd = {
+					__sveltekit_1unru8n = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.7bOxCMCg.js"),
-						import("/_app/immutable/entry/app.CwX0ovE7.js")
+						import("/_app/immutable/entry/start.BokW7yu7.js"),
+						import("/_app/immutable/entry/app.Bbis9Nir.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
