--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<meta name="apple-mobile-web-app-title" content="NGOK" />
 	<link rel="manifest" href="/site.webmanifest" />
-
-	<meta name="theme-color" content="#FFFFFF" media="(prefers-color-scheme: light)" />
-	<meta name="theme-color" content="#090A0B" media="(prefers-color-scheme: dark)" />
+	<meta name="theme-color" content="#ffffff" />
 
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -60,6 +58,10 @@
 				savedTheme ? savedTheme === 'dark' : prefersDarkScheme
 			);
 
+			document
+				.querySelector('meta[name="theme-color"]')
+				?.setAttribute('content', (savedTheme ? savedTheme === 'dark' : prefersDarkScheme) ? '#090a0b' : '#ffffff');
+
 			const savedLanguage = getCookie('language');
 			const browserLanguage = navigator.language.startsWith('ru') ? 'ru' : 'en';
 			document.documentElement.setAttribute('lang', savedLanguage || browserLanguage);
@@ -69,15 +71,15 @@
 	
 		<link href="./_app/immutable/assets/0.Vy4otvV0.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.7bOxCMCg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.dtCDQRC8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BokW7yu7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DEZVsc0c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.DwHccnIN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DUcTUqGb.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CwX0ovE7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Bbis9Nir.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.D0gLaqi_.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BnVKDYGU.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DBnJICpU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/popper-layer-force-mount.cLOxdbZU.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DUXwRmnk.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.OvF6svLo.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.3yyak4pK.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.CboqEr5c.js">
 </head>
@@ -95,7 +97,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_spmkqd = {
+					__sveltekit_1unru8n = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -104,8 +106,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.7bOxCMCg.js"),
-						import("./_app/immutable/entry/app.CwX0ovE7.js")
+						import("./_app/immutable/entry/start.BokW7yu7.js"),
+						import("./_app/immutable/entry/app.Bbis9Nir.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
