--- a/404.html
+++ b/404.html
@@ -69,11 +69,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BokW7yu7.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DEZVsc0c.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.D3uAMOpa.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BmhdFDmj.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DwHccnIN.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.DUcTUqGb.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Bbis9Nir.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Dt5Ocr48.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.D0gLaqi_.js">
 </head>
 
@@ -81,15 +81,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1unru8n = {
+					__sveltekit_qzv6rj = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BokW7yu7.js"),
-						import("/_app/immutable/entry/app.Bbis9Nir.js")
+						import("/_app/immutable/entry/start.D3uAMOpa.js"),
+						import("/_app/immutable/entry/app.Dt5Ocr48.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
