--- a/404.html
+++ b/404.html
@@ -69,27 +69,28 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.D3uAMOpa.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BmhdFDmj.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DwHccnIN.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.DUcTUqGb.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Dt5Ocr48.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.D0gLaqi_.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.D0V2PAYD.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DJ8jElaB.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.BSb6bQwc.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.De91MRdQ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BHyfHI9x.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.dS-yRulu.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.CdvRKqbP.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_qzv6rj = {
+					__sveltekit_1ok02xj = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.D3uAMOpa.js"),
-						import("/_app/immutable/entry/app.Dt5Ocr48.js")
+						import("/_app/immutable/entry/start.D0V2PAYD.js"),
+						import("/_app/immutable/entry/app.BHyfHI9x.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
