--- a/index.html
+++ b/index.html
@@ -69,19 +69,22 @@
 	</script>
 
 	
-		<link href="./_app/immutable/assets/0.Vy4otvV0.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.B25Q204m.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D3uAMOpa.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BmhdFDmj.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/utils.DwHccnIN.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.DUcTUqGb.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Dt5Ocr48.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.D0gLaqi_.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DFa78hEW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/popper-layer-force-mount.cLOxdbZU.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.B5ZyVclm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.3yyak4pK.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DrBd1vS2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D0V2PAYD.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DJ8jElaB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/utils.BSb6bQwc.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.De91MRdQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BHyfHI9x.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.dS-yRulu.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.CdvRKqbP.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DUfByjA-.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/button.CbBzcVgG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BlQ5havf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/popper-layer-force-mount.CEneoGeY.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.BaI0sxpx.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.CrsgtSCs.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/fetchTableData.JhWmgOXU.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -97,7 +100,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_qzv6rj = {
+					__sveltekit_1ok02xj = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -106,8 +109,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D3uAMOpa.js"),
-						import("./_app/immutable/entry/app.Dt5Ocr48.js")
+						import("./_app/immutable/entry/start.D0V2PAYD.js"),
+						import("./_app/immutable/entry/app.BHyfHI9x.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
