--- a/debug/index.html
+++ b/debug/index.html
@@ -71,16 +71,16 @@
 	
 		<link href="../_app/immutable/assets/0.B25Q204m.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.6hry-hOM.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.wV_qKGZI.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.Cq1L0NlS.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.NPnbcyNj.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/utils.BSb6bQwc.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.De91MRdQ.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.g-wyORCi.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.Ck3GKr2M.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/disclose-version.dS-yRulu.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-client.CdvRKqbP.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.B6Solwn5.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.EkHVyQuJ.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/button.CQh0_QZR.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.BwsnZA36.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.BRnAALI6.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/popper-layer-force-mount.B9-UjWig.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.DzxMH9iB.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/3.CO0H8GyN.js">
@@ -92,7 +92,7 @@
 			
 			<script>
 				{
-					__sveltekit_1n0jfec = {
+					__sveltekit_1etob5j = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
@@ -101,8 +101,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.6hry-hOM.js"),
-						import("../_app/immutable/entry/app.g-wyORCi.js")
+						import("../_app/immutable/entry/start.Cq1L0NlS.js"),
+						import("../_app/immutable/entry/app.Ck3GKr2M.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
