--- a/404.html
+++ b/404.html
@@ -69,11 +69,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.6hry-hOM.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.wV_qKGZI.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Cq1L0NlS.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.NPnbcyNj.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.BSb6bQwc.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.De91MRdQ.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.g-wyORCi.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Ck3GKr2M.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.dS-yRulu.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.CdvRKqbP.js">
 </head>
@@ -82,15 +82,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1n0jfec = {
+					__sveltekit_1etob5j = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.6hry-hOM.js"),
-						import("/_app/immutable/entry/app.g-wyORCi.js")
+						import("/_app/immutable/entry/start.Cq1L0NlS.js"),
+						import("/_app/immutable/entry/app.Ck3GKr2M.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
