--- a/404.html
+++ b/404.html
@@ -69,28 +69,27 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Cq1L0NlS.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.NPnbcyNj.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.BSb6bQwc.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.De91MRdQ.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Ck3GKr2M.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.dS-yRulu.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.CdvRKqbP.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.EZzoXCMI.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CAnOtCKu.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.Dyn2-BR2.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.CxvFcR09.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DOBdQZ8r.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Da48tKRF.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1etob5j = {
+					__sveltekit_1t1hsuw = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Cq1L0NlS.js"),
-						import("/_app/immutable/entry/app.Ck3GKr2M.js")
+						import("/_app/immutable/entry/start.EZzoXCMI.js"),
+						import("/_app/immutable/entry/app.DOBdQZ8r.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
