--- a/index.html
+++ b/index.html
@@ -69,21 +69,20 @@
 	</script>
 
 	
-		<link href="./_app/immutable/assets/0.B25Q204m.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.Ddmm_Obi.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Cq1L0NlS.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.NPnbcyNj.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/utils.BSb6bQwc.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.De91MRdQ.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Ck3GKr2M.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.dS-yRulu.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.CdvRKqbP.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.EkHVyQuJ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/button.CQh0_QZR.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BRnAALI6.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/popper-layer-force-mount.B9-UjWig.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.DzxMH9iB.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DvjLHGIg.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.EZzoXCMI.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CAnOtCKu.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/utils.Dyn2-BR2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.CxvFcR09.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DOBdQZ8r.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Da48tKRF.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.B4k4vDZV.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/popper-layer-force-mount.Be-LmI6K.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Icon.jBcB12fb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CeXVHXrg.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.wgxkhTys.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.Dg2Kpr9h.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/fetchTableData.JhWmgOXU.js">
 </head>
 
@@ -100,7 +99,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_1etob5j = {
+					__sveltekit_1t1hsuw = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -109,8 +108,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Cq1L0NlS.js"),
-						import("./_app/immutable/entry/app.Ck3GKr2M.js")
+						import("./_app/immutable/entry/start.EZzoXCMI.js"),
+						import("./_app/immutable/entry/app.DOBdQZ8r.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
