--- a/debug/index.html
+++ b/debug/index.html
@@ -71,19 +71,19 @@
 	
 		<link href="../_app/immutable/assets/0.Ddmm_Obi.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.DBPzeLf5.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.BH4XCn8L.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.CrVvT5Y0.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.lRBVpK4U.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/utils.Dyn2-BR2.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.CxvFcR09.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.XtKM_xTr.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.DiVT0adC.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/disclose-version.Da48tKRF.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.9GkuZ2WC.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.dH0l8_YC.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/popper-layer-force-mount.Be-LmI6K.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Icon.jBcB12fb.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.DFE3GkiA.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.BwcNAhJt.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.wgxkhTys.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/3.C_7wlOmt.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/fetchTableData.JhWmgOXU.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/3.qYZfauIB.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/fetchTableData.vt-LFpTg.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -95,11 +95,11 @@ overflow: hidden;
 clip: rect(0, 0, 0, 0);
 white-space: nowrap;
 border-width: 0;
-transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]--><!----> <!--[!--><button class="focus-visible:ring-ring inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border-input bg-background hover:bg-accent hover:text-accent-foreground border shadow-sm h-9 px-4 py-2 my-1 w-full min-w-[256px] md:w-2/3 lg:w-1/2 2xl:w-1/3" type="button"><!---->Fetch<!----></button><!--]--><!----><!--]--></div><!----><!----> <footer class="flex flex-wrap justify-center gap-2 px-2 py-4 text-xs text-muted-foreground"><a href="https://ma.cyou/" class="hover:text-foreground">Author's site</a> <!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-14" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!----> <a href="https://opencollege-nsk.ru/" class="hover:text-foreground">NGOK's site</a> <!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-15" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!----> <a href="https://docs.google.com/spreadsheets/d/1FiMov0r4UUDKT6A56NWMImpoUakDC2YDevgaOpJQ7Qc/" class="hover:text-foreground">Schedule table</a> <!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-16" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!----> <a href="https://github.com/Mapagmataas1331/NGOK-Better-schedule" class="hover:text-foreground">Source code</a></footer><!----><!--]--> <!--[!--><!--]--><!--]-->
+transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]--><!----> <!--[!--><!--[!--><button class="focus-visible:ring-ring inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border-input bg-background hover:bg-accent hover:text-accent-foreground border shadow-sm h-9 px-4 py-2 my-1 w-full min-w-[256px] md:w-2/3 lg:w-1/2 2xl:w-1/3" type="button"><!---->Fetch<!----></button><!--]--><!--]--><!--]--></div><!----><!----> <footer class="flex flex-wrap justify-center gap-2 px-2 py-4 text-xs text-muted-foreground"><a href="https://ma.cyou/" class="hover:text-foreground">Author's site</a> <!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-14" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!----> <a href="https://opencollege-nsk.ru/" class="hover:text-foreground">NGOK's site</a> <!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-15" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!----> <a href="https://docs.google.com/spreadsheets/d/1FiMov0r4UUDKT6A56NWMImpoUakDC2YDevgaOpJQ7Qc/" class="hover:text-foreground">Schedule table</a> <!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-16" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!----> <a href="https://github.com/Mapagmataas1331/NGOK-Better-schedule" class="hover:text-foreground">Source code</a></footer><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_145mlwf = {
+					__sveltekit_qohkl6 = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
@@ -108,8 +108,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.DBPzeLf5.js"),
-						import("../_app/immutable/entry/app.XtKM_xTr.js")
+						import("../_app/immutable/entry/start.CrVvT5Y0.js"),
+						import("../_app/immutable/entry/app.DiVT0adC.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
