--- a/404.html
+++ b/404.html
@@ -69,11 +69,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CrVvT5Y0.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.lRBVpK4U.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DbtdFpF4.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.B6Gs_Z03.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.Dyn2-BR2.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.CxvFcR09.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DiVT0adC.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DXdORqbD.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Da48tKRF.js">
 </head>
 
@@ -81,15 +81,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_qohkl6 = {
+					__sveltekit_18662n = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CrVvT5Y0.js"),
-						import("/_app/immutable/entry/app.DiVT0adC.js")
+						import("/_app/immutable/entry/start.DbtdFpF4.js"),
+						import("/_app/immutable/entry/app.DXdORqbD.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
