--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
 	<title>NGOK</title>
 	<meta name="description" content="NGOK Better schedule" />
 	<meta name="keywords"
-		content="m, ma, mac, cyou, see, you, seeyou, c, u, cu, macyou, ma-cyou, ma.cyou, mapagmataas, mapagmatas, map, mapa, mapag, makak, makent, ngok. нгок, better, schedule, рассписание, НГОК, Новоосибирский Государственный Открытый Колледж, занятия, ngok.ma.cyou" />
+		content="m, ma, mac, cyou, see, you, seeyou, c, u, cu, macyou, ma-cyou, ma.cyou, mapagmataas, mapagmatas, map, mapa, mapag, makak, makent, ngok. нгок, better, classes, lessons, schedule, рассписание, нгок, новоосибирск, новоосибирский, государственный, городской, открытый, open, колледж, college, open-college, занятий, занятия, уроков, уроки, предметов, предметы, только, лучше, ngok.ma.cyou" />
 	<meta name="author" content="Mapagmataas" />
 	<meta name="robots" content="index, follow" />
 
@@ -69,11 +69,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DbtdFpF4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.B6Gs_Z03.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.hl2o2-tT.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.pJBwtvpB.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.Dyn2-BR2.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.CxvFcR09.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DXdORqbD.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BxK_sjeS.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Da48tKRF.js">
 </head>
 
@@ -81,15 +81,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_18662n = {
+					__sveltekit_15hdxv8 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DbtdFpF4.js"),
-						import("/_app/immutable/entry/app.DXdORqbD.js")
+						import("/_app/immutable/entry/start.hl2o2-tT.js"),
+						import("/_app/immutable/entry/app.BxK_sjeS.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
