--- a/debug/index.html
+++ b/debug/index.html
@@ -21,7 +21,7 @@
 	<title>NGOK</title>
 	<meta name="description" content="NGOK Better schedule" />
 	<meta name="keywords"
-		content="m, ma, mac, cyou, see, you, seeyou, c, u, cu, macyou, ma-cyou, ma.cyou, mapagmataas, mapagmatas, map, mapa, mapag, makak, makent, ngok. нгок, better, schedule, рассписание, НГОК, Новоосибирский Государственный Открытый Колледж, занятия, ngok.ma.cyou" />
+		content="m, ma, mac, cyou, see, you, seeyou, c, u, cu, macyou, ma-cyou, ma.cyou, mapagmataas, mapagmatas, map, mapa, mapag, makak, makent, ngok. нгок, better, classes, lessons, schedule, рассписание, нгок, новоосибирск, новоосибирский, государственный, городской, открытый, open, колледж, college, open-college, занятий, занятия, уроков, уроки, предметов, предметы, только, лучше, ngok.ma.cyou" />
 	<meta name="author" content="Mapagmataas" />
 	<meta name="robots" content="index, follow" />
 
@@ -71,16 +71,16 @@
 	
 		<link href="../_app/immutable/assets/0.CQPIK5rz.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.DbtdFpF4.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.B6Gs_Z03.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.hl2o2-tT.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.pJBwtvpB.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/utils.Dyn2-BR2.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.CxvFcR09.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.DXdORqbD.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.BxK_sjeS.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/disclose-version.Da48tKRF.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.DGglDHMZ.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.D70mLUkC.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/popper-layer-force-mount.Be-LmI6K.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Icon.jBcB12fb.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.DVLnaUiS.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.Dz01YQd3.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.wgxkhTys.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/3.qYZfauIB.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/fetchTableData.vt-LFpTg.js">
@@ -99,7 +99,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_18662n = {
+					__sveltekit_15hdxv8 = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
@@ -108,8 +108,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.DbtdFpF4.js"),
-						import("../_app/immutable/entry/app.DXdORqbD.js")
+						import("../_app/immutable/entry/start.hl2o2-tT.js"),
+						import("../_app/immutable/entry/app.BxK_sjeS.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
