--- a/src/app.html
+++ b/src/app.html
@@ -21,7 +21,7 @@
 	<title>NGOK</title>
 	<meta name="description" content="NGOK Better schedule" />
 	<meta name="keywords"
-		content="m, ma, mac, cyou, see, you, seeyou, c, u, cu, macyou, ma-cyou, ma.cyou, mapagmataas, mapagmatas, map, mapa, mapag, makak, makent, ngok. нгок, better, schedule, рассписание, НГОК, Новоосибирский Государственный Открытый Колледж, занятия, ngok.ma.cyou" />
+		content="m, ma, mac, cyou, see, you, seeyou, c, u, cu, macyou, ma-cyou, ma.cyou, mapagmataas, mapagmatas, map, mapa, mapag, makak, makent, ngok. нгок, better, classes, lessons, schedule, рассписание, нгок, новоосибирск, новоосибирский, государственный, городской, открытый, open, колледж, college, open-college, занятий, занятия, уроков, уроки, предметов, предметы, только, лучше, ngok.ma.cyou" />
 	<meta name="author" content="Mapagmataas" />
 	<meta name="robots" content="index, follow" />
 
